# token-pulse

./: .gitignore  Cargo.toml  README.md
crates/tp-aggregator/: Cargo.toml
crates/tp-aggregator/src/: lib.rs
crates/tp-cache/: Cargo.toml
crates/tp-cache/src/: lib.rs
crates/tp-collector/: Cargo.toml
crates/tp-collector-antigravity/src/: lib.rs
crates/tp-collector-claude/: Cargo.toml
crates/tp-collector-claude/src/: lib.rs
crates/tp-collector-codex/: Cargo.toml
crates/tp-collector-codex/src/: lib.rs
crates/tp-collector/src/: lib.rs
crates/tp-compute/: Cargo.toml
crates/tp-compute/src/: lib.rs
crates/tp-dash/: Cargo.toml
crates/tp-dash/src/: app_state.rs  lib.rs  theme.rs
crates/tp-dash/src/views/: bar_chart.rs  breakdown.rs  by_model.rs  collector_card.rs  heatmap.rs  metric_card.rs  mod.rs  panel.rs  session_table.rs  sparkline.rs  tabs.rs  weekly_chart.rs
crates/tp-dash/src/widgets/: hover.rs  mod.rs  popover.rs  portal.rs  responsive.rs
crates/tp-pool/: Cargo.toml
crates/tp-pool/src/: active.rs  archive.rs  lib.rs  metadata.rs  replace.rs  storage.rs
crates/tp-protocol/: Cargo.toml
crates/tp-protocol/src/: conversation.rs  datalog.rs  digest.rs  dimension.rs  error.rs  lib.rs  meta.rs  pricing.rs  traits.rs  view.rs
plugins/tp-antigravity-common/: Cargo.toml
plugins/tp-antigravity-common/src/: estimator.rs  ingest_store.rs  lib.rs  process_locator.rs  rpc_client.rs  types.rs
plugins/tp-collector-antigravity/: Cargo.toml
plugins/tp-collector-antigravity-ide/: Cargo.toml
plugins/tp-collector-antigravity-ide/src/: lib.rs
plugins/tp-collector-antigravity/src/: config.rs  lib.rs  rpc.rs  scanner.rs  store.rs  types.rs
plugins/tp-collector-claude/src/: lib.rs
plugins/tp-collector-codex/src/: lib.rs
src/: ccusage.rs  main.rs  model_aliases.rs  parser.rs  pricing.rs  scanner.rs  store.rs
src/ui/: mod.rs
tests/: integration_test.rs
