[workspace]
members = [
    "crates/tp-protocol",
    "crates/tp-pool",
    "crates/tp-compute",
    "crates/tp-cache",
    "crates/tp-collector",
    "plugins/tp-collector-antigravity",
    "plugins/tp-collector-codex",
    "plugins/tp-collector-claude",
    "crates/tp-aggregator",
    "crates/tp-dash",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
# ── Serialization ──
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"

# ── Async Runtime ──
tokio = { version = "1.52", features = ["full"] }
async-trait = "0.1.89"

# ── Time ──
chrono = { version = "0.4.44", features = ["serde"] }

# ── Error / Logging ──
thiserror = "2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# ── Concurrency / ID ──
parking_lot = "0.12.5"
uuid = { version = "1.23", features = ["v4"] }

# ── System / IO ──
dirs = "6.0"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
sysinfo = "0.38"
sha1 = "0.11"
rayon = "1.10"

# ── UI (Xilem + Linebender stack) ──
xilem = "0.4"

# ── Internal crates ──
tp-protocol = { path = "crates/tp-protocol" }
tp-pool = { path = "crates/tp-pool" }
tp-compute = { path = "crates/tp-compute" }
tp-cache = { path = "crates/tp-cache" }
tp-collector = { path = "crates/tp-collector" }
tp-collector-antigravity = { path = "plugins/tp-collector-antigravity" }
tp-collector-codex = { path = "plugins/tp-collector-codex" }
tp-collector-claude = { path = "plugins/tp-collector-claude" }
tp-aggregator = { path = "crates/tp-aggregator" }
tp-dash = { path = "crates/tp-dash" }

[package]
name = "token-pulse"
version.workspace = true
edition.workspace = true

[[bin]]
name = "token-pulse"
path = "src/main.rs"

[dependencies]
# Internal crates
tp-protocol.workspace = true
tp-pool.workspace = true
tp-compute.workspace = true
tp-cache.workspace = true
tp-collector.workspace = true
tp-collector-antigravity.workspace = true
tp-collector-codex.workspace = true
tp-collector-claude.workspace = true
tp-aggregator.workspace = true
tp-dash.workspace = true

# Runtime
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
chrono.workspace = true
xilem.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha1.workspace = true
sysinfo.workspace = true
rayon.workspace = true
