[package]
name = "tp-aggregator"
version.workspace = true
edition.workspace = true

[dependencies]
tp-protocol.workspace = true
tp-pool.workspace = true
tp-cache.workspace = true
tp-compute.workspace = true
serde.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
