[package]
name = "tp-cache"
version.workspace = true
edition.workspace = true

[dependencies]
tp-protocol.workspace = true
tp-pool.workspace = true
tp-compute.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
