[package]
name = "tp-collector-claude"
version.workspace = true
edition.workspace = true

[dependencies]
tp-protocol.workspace = true
tp-collector.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
