[package]
name = "tp-pool"
version.workspace = true
edition.workspace = true

[dependencies]
tp-protocol.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
