[package]
name = "tp-antigravity-common"
version.workspace = true
edition.workspace = true

[dependencies]
tp-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
sysinfo.workspace = true
dirs.workspace = true
