[package]
name = "tp-collector-antigravity-ide"
version.workspace = true
edition.workspace = true

[dependencies]
tp-protocol.workspace = true
tp-collector.workspace = true
tp-antigravity-common.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
dirs.workspace = true
parking_lot.workspace = true
