[package]
name = "tp-collector-antigravity"
version.workspace = true
edition.workspace = true

[dependencies]
tp-protocol.workspace = true
tp-collector.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dirs.workspace = true
sysinfo.workspace = true
sha1.workspace = true
